# presence-conductor

./: README.md  hacs.json  pyproject.toml
custom_components/presence_conductor/: __init__.py  binary_sensor.py  button.py  calibration.py  config.py  config_flow.py  const.py  controller.py  diagnostics.py  discovery.py  entity.py  event.py  icons.json  manifest.json  observation.py  sensor.py  services.yaml  strings.json  switch.py
custom_components/presence_conductor/core/: __init__.py  activity.py  belief.py  emissions.py  engine.py  events.py  evidence.py  filter.py  fusion.py  gating.py  guided.py  health.py  model.py  plan.py  stats.py  timers.py
custom_components/presence_conductor/translations/: en.json  nb.json
docs/: CALIBRATION.md  DECISION.md  ENGINE_SPEC.md  ESTIMATOR_RATIONALE.md  README.md
tests/: conftest.py  fake_engine.py  test_build_config.py  test_config_flow.py  test_controller.py  test_devices.py  test_diagnostics.py  test_discovery.py  test_e2e.py  test_entities.py  test_init.py  test_purity.py  test_recorder_discipline.py  test_replay.py
tests/core/: harness.py  test_activity.py  test_emissions.py  test_engine_lifecycle.py  test_evidence.py  test_filter.py  test_fusion.py  test_gate_evidence.py  test_gating.py  test_guided.py  test_health.py  test_statistics.py
tools/: replay.py
